crates/squealy/tests/compile_fail/aggregate_arithmetic_is_aggregate_in_select.stderr
error[E0277]: the trait bound `(ColumnRef<'_, UserName>, Expr<'_, AddExpr<CountExpr<UserId>, i64>, squealy::BinaryExprAst<squealy::AggregateExprAst<squealy::ColumnExprAst<UserId>>, squealy::LiteralExprAst<i64>>>): squealy::ProjectionClass` is not satisfied
  --> tests/compile_fail/aggregate_arithmetic_is_aggregate_in_select.rs:16:10
   |
16 |         .select(|(user,)| (user.name, user.id.count() + 1i64));
   |          ^^^^^^ unsatisfied trait bound
   |
   = help: the trait `squealy::ProjectionClass` is not implemented for `(ColumnRef<'_, UserName>, Expr<'_, AddExpr<CountExpr<UserId>, i64>, squealy::BinaryExprAst<squealy::AggregateExprAst<squealy::ColumnExprAst<UserId>>, squealy::LiteralExprAst<i64>>>)`
   = help: the following other types implement trait `squealy::ProjectionClass`:
             ()
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
             (T0, T1, T2, T3, T4, T5)
             (T0, T1, T2, T3, T4, T5, T6)
             (T0, T1, T2, T3, T4, T5, T6, T7)
           and $N others
   = note: required for `Ungrouped` to implement `squealy::ValidSelect<(ColumnRef<'_, UserName>, Expr<'_, AddExpr<CountExpr<UserId>, i64>, squealy::BinaryExprAst<squealy::AggregateExprAst<squealy::ColumnExprAst<UserId>>, squealy::LiteralExprAst<i64>>>), OrderNone>`
note: required by a bound in `squealy::SourceQuery::select`
  --> src/query.rs
   |
   |     fn select<P, Indices>(
   |        ------ required by a bound in this associated function
...
   |             crate::ValidSelect<P, <Self as SelectAst<'conn, 'scope, Conn>>::OrderClass>,
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `SourceQuery::select`
